# copper

./: Cargo.toml  README.md  test.co  test.co.old  test.mc  test.mlog
examples/: hello_world.co
extensions/copper-syntax/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
extensions/copper-syntax/syntaxes/: mc.tmLanguage.json  mc.tmLanguage.json.old
schematics/: README.md  copper-runtime-v1.msch  copper-runtime-v2.msch
src/: main.rs
src/analyzer/: mod.rs  visitor.rs  walk.rs
src/analyzer/typeck/: mod.rs
src/analyzer/visitors/: constants.rs  mod.rs  raw_functions.rs
src/codegen/: gen.rs  mod.rs  structure.md
src/lexer2/: mod.rs
src/lir/: mod.rs
src/parse2/: lex_rules.rs  mod.rs  scoped.rs  temp_alloc.rs
src/parse2/types/: ast_types.rs  functions.rs  lexer_tokens.rs  mod.rs
src/parsing/: lexer.rs  mod.rs
src/parsing/parser/: ast.rs  mod.rs  scoped.rs
src/template/: cleanup.md  cleanup.mlog  prelude.md  prelude.mlog  prepare.md  prepare.mlog  runtime.md  runtime.msch  things.mlog
src/typing/: functions.rs  types.rs
src/util/: io.rs  mod.rs  terrible_vec_api.rs
