[package]
name = "cuc"
version = "0.1.0"
edition = "2021"
authors = ["Rowan S-L <r@fawkes.io>"]
description = "Compiler for the copper language, targeting mlog (mindustry logic language)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
log = "0.4.17"
pretty_env_logger = "0.4.0"
thiserror = "1.0.31"
clap = { version = "3.2", features = ["derive"] }
regex = "1.5.6"
uuid = { version = "1.1.2", features = ["v4"] }
